--- a/terms-conditions..html
+++ b/terms-conditions..html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/side-nav.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/terms.css">
+    <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" href="css/dark-theme.css">
     
 </head>
@@ -387,7 +388,7 @@
         </div>
        </div>
         <!-- success modal -->
-        <div class="modal fade custom-modal success-modal" id="successModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade custom-modal success-modal show" style="display: block;" id="successModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
