2fa page updates

--- a/2FA.html
+++ b/2FA.html
@@ -43,10 +43,14 @@
                 </div>
                 <div class="gen-qr-block">
                     <p>
-                        Don't have code? <a class="qr-gen-btn" href="#">Get QR Code</a></code>
+                        Don't have code? <a class="qr-gen-btn" href="#">Get QR Code</a>
                     </p>
                 </div>
-
+                <div class="back-btn">
+                    <a class="back-login-btn" href="#">
+                        <img src="img/back-arrw.svg" alt=""> Back to Home
+                    </a>
+                </div>
                 <div class="copyright-login">
                     Copyright @ 2022 Propbase
                 </div>
