bnr updates and btn in mob header

--- a/home.html
+++ b/home.html
@@ -1041,6 +1041,9 @@
                                 <div class="box-props">
                                     <p><span class="imgs-props"><img src="img/props4.svg" alt="props1"></span> <span class="text-sec">Chainge Finance</span></p>
                                 </div>
+                                <div class="box-props">
+                                    <p><span class="imgs-props"><img src="img/props5.svg" alt="props1"></span> <span class="text-sec">Bitget</span></p>
+                                </div>
                             </div>
                         </section>
 
