--- a/staking.html
+++ b/staking.html
@@ -33,6 +33,52 @@
                         </a>
                     </div>
                     <div class="toggle-btn-block">
+                        <!-- buy props -->
+                        <div class="buy-pros-select-block">
+                            <div class="btn-group buy-pros-dropdown">
+                                <button type="button" class="buy-pros-btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <span class="acc-label">Buy $PROPS</span>
+                                </button>
+                                <ul class="dropdown-menu dropdown-menu-end">
+                                    <li>
+                                        <a class="dropdown-item" type="button">
+                                            <span class="icon">
+                                                <img src="img/pros-mex.svg" alt="">
+                                            </span> MEXC
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" type="button">
+                                            <span class="icon">
+                                                <img src="img/pros-pan.svg" alt="">
+                                            </span> Pancake
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" type="button">
+                                            <span class="icon">
+                                                <img src="img/coin-liquid.svg" alt="">
+                                            </span> Liquidswap
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item">
+                                            <span class="icon">
+                                                <img src="img/coin-chaing.svg" alt="">
+                                            </span> Chainge Finance
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item item-disbaled">
+                                            <span class="icon">
+                                                <img src="img/bitget.svg" alt="">
+                                            </span> Bitget
+                                        </a>
+                                    </li>
+                                    
+                                </ul>
+                            </div>
+                        </div>
                         <button class="nav-toggle-btn" id="navToggleBtn">
                             <!-- <img src="img/nav-toggle.svg" alt=""> -->
                             <span class="line-cover">
@@ -131,7 +177,6 @@
         <!-- right sec -->
         <div class="content-block-outer">
             <!-- Header -->
-            <!-- Header -->
             <div class="header-wrapper shadow-bg sticky-lg-top">
                 <div class="header-title-block">
                     <!-- <div class="live-active wallet-btn">
@@ -211,12 +256,20 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item item-disbaled">
+                                        <a class="dropdown-item">
                                             <span class="icon">
                                                 <img src="img/coin-chaing.svg" alt="">
                                             </span> Chainge Finance
                                         </a>
                                     </li>
+                                    <li>
+                                        <a class="dropdown-item item-disbaled">
+                                            <span class="icon">
+                                                <img src="img/bitget.svg" alt="">
+                                            </span> Bitget
+                                        </a>
+                                    </li>
+                                    
                                 </ul>
                             </div>
                         </div>
@@ -390,7 +443,7 @@
                     <div class="welcome-stake-outer-v3">
                         <div class="bnr-title">
                             <p>
-                                AUDITED BY
+                                SECURITY AUDIT BY
                             </p>
                         </div>
                         <div class="item-row">
@@ -410,10 +463,10 @@
                             </div>
                             <div class="item-col">
                                 <div class="icon">
-                                    <img src="img/bnr-hacken.svg" alt="">
+                                    <img src="img/bnr-hacken-full.svg" alt="">
                                 </div>
                                 <p>
-                                    <a class="a-link link-soon" href="#">Coming Soon</a>
+                                    <a class="a-link link-soon" href="#">Report coming soon</a>
                                 </p>
                             </div>
                         </div>
@@ -552,17 +605,15 @@
                                                         <div class="text-block">
                                                             <div class="text-block-inner">
                                                                 <div class="progress-label">
-                                                                    Pool Cap :
+                                                                    Pool Cap:
                                                                 </div>
-                                                                <h5>20,000,000 
-                                                                    <span>$PROPS</span></h5>
+                                                                <h5><span>PROPS</span> 20,000,000</h5>
                                                             </div>
                                                             <div class="text-block-inner">
                                                                 <div class="progress-label">
-                                                                    Remaining :
+                                                                    Remaining Pool Cap:
                                                                 </div>
-                                                                <h5>20,000,000 
-                                                                    <span>$PROPS</span></h5>
+                                                                <h5><span>PROPS</span> 20,000,000</h5>
                                                             </div>
                                                         </div>
                                                         <div class="progress-block">
@@ -587,18 +638,18 @@
                                             <div class="table-block-cover">
                                                 <div class="table-card card-br-b">
                                                     <span class="info"><img src="img/card-info.svg" alt=""></span>
-                                                    <p class="tab-label">Lock-In Ends</p>
-                                                    <h5 class="tab-val">01 Aug 24</h5>
+                                                    <p class="tab-label">Total PROPS Staked</p>
+                                                    <h5 class="tab-val">128</h5>
                                                 </div>
                                                 <div class="table-card card-br-b">
-                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Total Value Staked</p>
                                                     <h5 class="tab-val">$23,456</h5>
+                                                    <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                 </div>
                                                 <div class="table-card">
                                                     <span class="info"><img src="img/card-info.svg" alt=""></span>
-                                                    <p class="tab-label">Total $PROPS Staked</p>
-                                                    <h5 class="tab-val">128</h5>
+                                                    <p class="tab-label">Lock-In Ends</p>
+                                                    <h5 class="tab-val">01 Aug 24</h5>
                                                 </div>
                                                 <div class="table-card">
                                                     <span class="info"><img src="img/card-info.svg" alt=""></span>
