--- a/home.html
+++ b/home.html
@@ -1030,19 +1030,19 @@
                             <div class="heading">Buy <span>$PROPS on:</span></div>
                             <div class="four-props">
                                 <div class="box-props">
-                                    <p><span class="imgs-props"><img src="img/props1.svg" alt="props1"></span> <span class="text-sec">MEXC</span></p>
+                                    <span class="imgs-props"><img src="img/props1.svg" alt="props1"></span> <span class="text-sec">MEXC</span>
                                 </div>
                                 <div class="box-props">
-                                    <p><span class="imgs-props"><img src="img/props2.svg" alt="props1"></span> <span class="text-sec">Pancake</span></p>
+                                    <span class="imgs-props"><img src="img/props2.svg" alt="props1"></span> <span class="text-sec">Pancake</span>
                                 </div>
                                 <div class="box-props">
-                                    <p><span class="imgs-props"><img src="img/props3.svg" alt="props1"></span> <span class="text-sec">Liquidswap</span></p>
+                                    <span class="imgs-props"><img src="img/props3.svg" alt="props1"></span> <span class="text-sec">Liquidswap</span>
                                 </div>
                                 <div class="box-props">
-                                    <p><span class="imgs-props"><img src="img/props4.svg" alt="props1"></span> <span class="text-sec">Chainge Finance</span></p>
+                                    <span class="imgs-props"><img src="img/props4.svg" alt="props1"></span> <span class="text-sec">Chainge Finance</span>
                                 </div>
                                 <div class="box-props">
-                                    <p><span class="imgs-props"><img src="img/props5.svg" alt="props1"></span> <span class="text-sec">Bitget</span></p>
+                                    <span class="imgs-props"><img src="img/props5.svg" alt="props1"></span> <span class="text-sec">Bitget</span>
                                 </div>
                             </div>
                         </section>
