buy props title

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                                     <span class="acc-label">Buy $PROPS</span>
                                 </button>
                                 <ul class="dropdown-menu dropdown-menu-end">
+                                    <li class="props-title">
+                                        <h4>How to Buy PROPS</h4>
+                                    </li>
                                     <li>
                                         <a class="dropdown-item" type="button">
                                             <span class="icon">
@@ -275,6 +278,9 @@
                                     <span class="acc-label">Buy $PROPS</span>
                                 </button>
                                 <ul class="dropdown-menu dropdown-menu-end">
+                                    <li class="props-title">
+                                        <h4>How to Buy PROPS</h4>
+                                    </li>
                                     <li>
                                         <a class="dropdown-item" type="button">
                                             <span class="icon">
