--- a/staking.html
+++ b/staking.html
@@ -613,7 +613,7 @@
                                                                 <div class="progress-label">
                                                                     Remaining Pool Cap:
                                                                 </div>
-                                                                <h5><span>PROPS</span> 20,000,000</h5>
+                                                                <h5>20,000,000.01 <span>PROPS</span></h5>
                                                             </div>
                                                         </div>
                                                         <div class="progress-block">
@@ -628,7 +628,7 @@
                                                         </div>
                                                         <div class="dur-block dur-itm-block">
                                                             Duration<br>
-                                                            <span>3 Month</span>
+                                                            <span>2d 21h 56min</span>
                                                         </div>
                                                     </div>
 
@@ -639,7 +639,7 @@
                                                 <div class="table-card card-br-b">
                                                     <span class="info"><img src="img/card-info.svg" alt=""></span>
                                                     <p class="tab-label">Total PROPS Staked</p>
-                                                    <h5 class="tab-val">128</h5>
+                                                    <h5 class="tab-val">01 Aug 24, 12:28pm</h5>
                                                 </div>
                                                 <div class="table-card card-br-b">
                                                     <p class="tab-label">Total Value Staked</p>
