nav and header upates

--- a/index.html
+++ b/index.html
@@ -250,10 +250,11 @@
                 <div class="right-block">
                     <div class="info-block">
                         <span class="info-label">$Props: </span>
-                        <span class="info-val">$0.0035</span>
+                        <span class="info-val">$ 0.045 USD</span>
                         <span class="info-val info-val-end pros-val pros-val-down">
                             <img src="img/pros-dwn.svg" alt=""> 03.54%
                         </span>
+                        <span class="info-val info-val-end">$ 14,910,900 USD</span>
                     </div>
 
                     <!-- <div class="buy-pros-block">
